# chess-snap

./: .flutter-plugins-dependencies  .gitignore  LICENCE.txt  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset  package_graph.json
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/extension_discovery/: devtools.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/852537e3ecdaad7885e1a4f2a3f277f5/: .filecache  dart_build.d  dart_build.stamp  debug_bundle_windows-x64_assets.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json  unpack_windows.stamp  windows_engine_sources.d
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart  theme_adding.txt
lib/features/: app.dart  from_picture_view.dart  result_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
server/: app.py  requirements.txt  setup.bat  setup_venv.bat  setup_venv.sh  start_server.bat  start_server.sh  start_server_venv.bat  start_server_venv.sh  test_environment.bat
server/chess_positions/: __init__.py  recognition.py
server/chess_positions/roboflow_detection/: pyproject.toml
server/chess_positions/roboflow_detection/roboflow_detection/: __init__.py  detect.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+43 files in other folders)
