[project]
name = "roboflow-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "david"}
]
license = {text = "david, ido"}
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "inference-sdk (>=0.51.3,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
